--- a/res/layout/enforce_record.xml
+++ b/res/layout/enforce_record.xml
@@ -11,6 +11,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="100dp"
+            android:background="@color/lightsteelblue"
             android:orientation="horizontal" >
 
             <TextView
