--- a/res/layout/enforce_record_item.xml
+++ b/res/layout/enforce_record_item.xml
@@ -1,40 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_width="fill_parent"
+    android:layout_height="65dp"
+    android:minHeight="65dp"
     android:gravity="center_vertical"
     android:orientation="horizontal" >
 	
     <CheckBox 
         android:id="@+id/checkbox"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:background="@drawable/checkbox"
-        android:layout_width="100dp"
+        style="@style/enforceCheckBox"
+        android:layout_width="50dp"
+        android:gravity="center"
+        android:layout_marginLeft="30dp"
         android:layout_height="wrap_content"/>
 
         <TextView
             android:id="@+id/text_time"
             style="@style/enforceTextItem"
-            android:layout_marginLeft="29dp"
-            android:layout_width="0dp"
-        	android:layout_weight="2"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:text="@string/enforce_time_law"/>
 
         <TextView
             android:id="@+id/text_paper"
             style="@style/enforceTextItem"
-            android:layout_width="0dp"
-            android:layout_weight="2"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:text="@string/enforce_form_check"/>
 
         <TextView
             android:id="@+id/text_paper_no"
             style="@style/enforceTextItem"
-            android:layout_width="0dp"
-            android:layout_weight="2"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:text="@string/enforce_paper"/>
         
@@ -42,16 +39,14 @@
         <TextView
             android:id="@+id/text_officer"
             style="@style/enforceTextItem"
-            android:layout_width="0dp"
-       		 android:layout_weight="1"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="@string/enforce_officer" />
 
         <TextView
             android:id="@+id/text_officer_id"
             style="@style/enforceTextItem"
-            android:layout_width="0dp"
-        	android:layout_weight="3"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:text="@string/enforce_num_id"/>
 
@@ -59,8 +54,7 @@
         <TextView
             android:id="@+id/text_remark"
             style="@style/enforceTextItem"
-            android:layout_width="0dp"
-            android:layout_weight="2"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:text="@string/remark"/>
         
