--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -74,13 +74,13 @@
         <item name="android:layout_width">262dp</item>
         <item name="android:background">@drawable/sidebar_back</item>
     </style>
-    <style name="textTitle">
+    <style name="sideTextTitle">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">#f0f0f1</item>
         <item name="android:layout_marginTop">16dp</item>
         <item name="android:layout_marginLeft">24dp</item>
     </style>
-    <style name="editText" parent="@android:style/Widget.EditText">
+    <style name="sideEditText" parent="@android:style/Widget.EditText">
         <item name="android:background">@drawable/sidebar_input1</item>
         <item name="android:layout_marginTop">10dp</item>
         <item name="android:layout_marginLeft">16dp</item>
@@ -88,7 +88,7 @@
         <item name="android:layout_height">44dp</item>
         <item name="android:focusable">true</item>
     </style>
-    <style name="editTextSmall" parent="@android:style/Widget.EditText">
+    <style name="sideEditTextSmall" parent="@android:style/Widget.EditText">
         <item name="android:background">@drawable/sidebar_input3</item>
         <item name="android:layout_width">70dp</item>
         <item name="android:layout_height">44dp</item>
@@ -96,7 +96,7 @@
         <item name="android:layout_marginLeft">10dp</item>
         <item name="android:focusable">true</item>
     </style>
-    <style name="searchButton" parent="@android:style/Widget.Button">
+    <style name="sideSearchButton" parent="@android:style/Widget.Button">
         <item name="android:background">@drawable/sidebar_button</item>
         <item name="android:layout_marginTop">39dp</item>
         <item name="android:layout_marginLeft">14dp</item>
@@ -104,34 +104,77 @@
         <item name="android:layout_height">55dp</item>
         <item name="android:padding">0dp</item>
     </style>
-    <style name="spinLarge" parent="@android:style/Widget.Holo.Light.Spinner">
+    <style name="sideSpinLarge" parent="@android:style/Widget.Holo.Light.Spinner">
         <item name="android:background">@drawable/sidebar_spin_l</item>
         <item name="android:layout_marginTop">10dp</item>
         <item name="android:layout_marginLeft">16dp</item>
         <item name="android:layout_width">230dp</item>
         <item name="android:layout_height">44dp</item>
     </style>
-    <style name="spinSmall" parent="@style/spinLarge">
+    <style name="sideSpinSmall" parent="@style/sideSpinLarge">
         <item name="android:background">@drawable/sidebar_spin_s</item>
         <item name="android:layout_width">150dp</item>
     </style>
     
     <!-- 现场执法详情页 -->
     <style name="enfoceTextHeader">
-        <item name="android:textSize">16dp</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:textColor">#4b5055</item>
         <item name="android:layout_gravity">center</item>
+        <item name="android:gravity">center</item>
     </style>
     <style name="enforceTextItem">
-        <item name="android:textSize">16dp</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:textColor">#000000</item>
         <item name="android:layout_gravity">center</item>
+        <item name="android:gravity">center</item>
     </style>
-    
+    <style name="enforceCheckBox" parent="@android:style/Widget.Holo.Light.CompoundButton.CheckBox">
+        <item name="android:button">@drawable/enforce_checkbox</item>
+    </style>
     <!-- 文书页 -->
     <style name="paperButton">
         <item name="android:layout_width">400dp</item>
         <item name="android:layout_height">50dp</item>
         <item name="android:layout_marginLeft">20dp</item>
+    </style>
+    
+    <!-- 企业信息 -->
+    <style name="infoNavBarText" parent="@android:style/Widget.Holo.Light.TextView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">60dp</item>
+        <!-- <item name="android:background">@drawable/info_nav_bar_selector</item> -->
+        <item name="android:gravity">center</item>
+        <item name="android:clickable">true</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+    <style name="infoActionBar">
+        <item name="android:background">@color/lightsteelblue</item>
+        <item name="android:layout_height">80dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+    <style name="infoActionTitleText" parent="@android:style/Widget.Holo.Light.TextView">
+        <item name="android:textSize">24sp</item>
+        <item name="android:layout_marginLeft">30dp</item>
+         <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_gravity">left|center_vertical</item>
+    </style>
+    <style name="infoActionButtonAdd" parent="@android:style/Widget.Holo.Light.Button">
+        <item name="android:background">@drawable/info_button_add_selector</item>
+        <item name="android:layout_width">250dp</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_marginRight">16dp</item>
+        <item name="android:layout_gravity">center_vertical</item>
+    </style>
+    <style name="infoActionButtonDelete" parent="@android:style/Widget.Holo.Light.Button">
+        <item name="android:background">@drawable/enforce_button_delete</item>
+        <item name="android:layout_width">250dp</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_marginRight">16dp</item>
+        <item name="android:layout_gravity">center_vertical</item>
     </style>
 </resources>
